--- a/final_proyect/frontend/package.json
+++ b/final_proyect/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "jwt-decode": "^3.1.2",
     "ra-data-json-server": "^4.14.1",
     "react": "^18.2.0",
     "react-admin": "^4.14.1",
