--- a/final_proyect/frontend/package.json
+++ b/final_proyect/frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "eslint": "^5.16.0",
     "ra-data-json-server": "^4.14.1",
+    "ra-language-spanish": "^1.0.0",
     "react": "^18.2.0",
     "react-admin": "^4.14.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
