--- a/final_proyect/frontend/package.json
+++ b/final_proyect/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "faker": "^6.6.6",
     "jwt-decode": "^3.1.2",
     "ra-data-json-server": "^4.14.1",
     "ra-language-spanish": "^1.0.0",
